--- a/source/code/templates/find-tags.html
+++ b/source/code/templates/find-tags.html
@@ -29,6 +29,16 @@ SPDX-License-Identifier: MIT-0 -->
           <input
             class="form-check-input"
             type="radio"
+            id="rdsRadio"
+            value="rds"
+            name="resource_type"
+          />
+          <label class="form-check-label" for="rdsRadio">Amazon Aurora DB Clusters</label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
             id="ebsRadio"
             value="ebs"
             name="resource_type"
@@ -58,6 +68,26 @@ SPDX-License-Identifier: MIT-0 -->
         </div>
         <div class="form-check">
           <input
+          class="form-check-input"
+          type="radio"
+          id="rdsInstancesRadio"
+          value="rdsInstances"
+          name="resource_type"
+          />
+          <label class="form-check-label" for="rdsInstancesRadio">Amazon RDS Instances</label>
+        </div>
+        <div class="form-check">
+          <input
+          class="form-check-input"
+          type="radio"
+          id="bucketRadio"
+          value="s3"
+          name="resource_type"
+          />
+          <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
+        </div>
+        <div class="form-check">
+          <input
             class="form-check-input"
             type="radio"
             id="lambdaRadio"
@@ -65,16 +95,6 @@ SPDX-License-Identifier: MIT-0 -->
             name="resource_type"
           />
           <label class="form-check-label" for="lambdaRadio">AWS Lambda Functions</label>
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="radio"
-            id="bucketRadio"
-            value="s3"
-            name="resource_type"
-          />
-          <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
         </div>
         <button type="submit" class="btn btn-primary btn-lg">Find Tags</button>
       </form>
