--- a/source/code/templates/select-resource-type.html
+++ b/source/code/templates/select-resource-type.html
@@ -30,6 +30,16 @@ SPDX-License-Identifier: MIT-0 -->
           <input
             class="form-check-input"
             type="radio"
+            id="rdsRadio"
+            value="rds"
+            name="resource_type"
+          />
+          <label class="form-check-label" for="rdsRadio">Amazon Aurora DB Clusters</label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
             id="ebsRadio"
             value="ebs"
             name="resource_type"
@@ -61,31 +71,31 @@ SPDX-License-Identifier: MIT-0 -->
           <input
             class="form-check-input"
             type="radio"
+            id="rdsInstancesRadio"
+            value="rdsInstances"
+            name="resource_type"
+          />
+          <label class="form-check-label" for="rdsInstancesRadio">Amazon RDS Instances</label>
+        </div>
+        <div class="form-check">
+          <input
+          class="form-check-input"
+          type="radio"
+          id="bucketRadio"
+          value="s3"
+          name="resource_type"
+          />
+          <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="radio"
             id="lambdaRadio"
             value="lambda"
             name="resource_type"
           />
           <label class="form-check-label" for="ec2Radio">AWS Lambda Functions</label>
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="radio"
-            id="rdsRadio"
-            value="rds"
-            name="resource_type"
-          />
-          <label class="form-check-label" for="rdsRadio">Amazon RDS Clusters</label>
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="radio"
-            id="bucketRadio"
-            value="s3"
-            name="resource_type"
-          />
-          <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
         </div>
         <button type="submit" class="btn btn-primary btn-lg">
           Select
