--- a/source/code/templates/type-to-tag-group.html
+++ b/source/code/templates/type-to-tag-group.html
@@ -17,6 +17,10 @@ SPDX-License-Identifier: MIT-0 -->
         <form method="post" action="{{ url_for('get_tag_group_names') }}">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="form-check">
+                <input class="form-check-input" type="radio" id="rdsRadio" value="rds" name="resource_type">
+                    <label class="form-check-label" for="rdsRadio">Amazon Aurora DB Clusters</label>
+            </div>
+            <div class="form-check">
                 <input class="form-check-input" type="radio" id="ebsRadio" value="ebs" name="resource_type" checked>
                     <label class="form-check-label" for="ebsRadio">Amazon EBS Volumes</label>
             </div>
@@ -29,16 +33,16 @@ SPDX-License-Identifier: MIT-0 -->
                     <label class="form-check-label" for="eksRadio">Amazon EKS Clusters</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" id="lambdaRadio" value="lambda" name="resource_type">
-                    <label class="form-check-label" for="lambdaRadio">AWS Lambda Functions</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" id="rdsRadio" value="rds" name="resource_type">
-                    <label class="form-check-label" for="rdsRadio">Amazon RDS Clusters</label>
+                <input class="form-check-input" type="radio" id="rdsInstancesRadio" value="rdsInstances" name="resource_type">
+                    <label class="form-check-label" for="rdsInstancesRadio">Amazon RDS Instances</label>
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" id="bucketRadio" value="s3" name="resource_type">
-                    <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
+                <label class="form-check-label" for="bucketRadio">Amazon S3 Buckets</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" id="lambdaRadio" value="lambda" name="resource_type">
+                    <label class="form-check-label" for="lambdaRadio">AWS Lambda Functions</label>
             </div>
             <button type="submit" class="btn btn-primary btn-lg">Manage Tag Groups</button>
         </form>
